--- a/src/Diamante/FrontBundle/Resources/translations/jsmessages.ru_RU.yml
+++ b/src/Diamante/FrontBundle/Resources/translations/jsmessages.ru_RU.yml
@@ -66,7 +66,7 @@ diamante_front:
       alert:
         title: Error
         text: An unprocessed error happened. Please try again!
-      model:
+      modal:
         title: Modal Window
         submit: Save changes
 
