--- a/src/Diamante/FrontBundle/Resources/translations/jsmessages.ru_RU.yml
+++ b/src/Diamante/FrontBundle/Resources/translations/jsmessages.ru_RU.yml
@@ -45,7 +45,7 @@ diamante_front:
 
     model:
       error:
-        required: Can't be blank
+        required: "Can't be blank"
 
     template:
       form:
@@ -159,9 +159,11 @@ diamante_front:
         ticket_update: Ticket %{ticket_update_id} updated
         status_closed: Ticket %{ticket_status_closed_id} status changed. Ticket status is "Closed"
         status_open: Ticket %{ticket_status_open_id} status changed. Ticket status is "Open"
+        create_ticket: Ticket %{ticket_created_id} created
       edit:
         title: Edit Ticket %{ticket_id}
       edit_ticket: Edit Ticket: %{key} - %{subject}
+      search_result: Search Result
 
     model:
       error:
@@ -186,9 +188,16 @@ diamante_front:
         subject: Subject
         priority: Priority
         status: Status
+      resolve_button: Resolve Ticket
+      reopen_button: Reopen Ticket
 
     view:
       all_tickets: View all tickets
+
+    router:
+      view_ticket: View Ticket
+      create_ticket: Create Ticket
+      edit_ticket: Edit Ticket
 
   user:
     controller:
@@ -197,6 +206,7 @@ diamante_front:
       alert:
         edit_error:
           title: Edit User Error
+      edit_user: Edit User
 
     model:
       error:
