DIAM-1860 add warning message when javascript is disabled, small fixes

--- a/src/Diamante/FrontBundle/Resources/translations/messages.en.yml
+++ b/src/Diamante/FrontBundle/Resources/translations/messages.en.yml
@@ -9,3 +9,5 @@ eltrino:
         comment:
           entity_label:        Comment
           entity_plural_label: Comments
+        js_warning_label: Warning!
+        js_warning_text: Either you have javascript disabled or your browser does not support javascript. To work properly, this page requires javascript to be enabled.
