Remove inconsistency in lables

--- a/src/Diamante/FrontBundle/Resources/translations/jsmessages.ru_RU.yml
+++ b/src/Diamante/FrontBundle/Resources/translations/jsmessages.ru_RU.yml
@@ -83,7 +83,7 @@ diamante_front:
       alert:
         confirm_success:
           title: Email Confirmation Success
-          text: You may login and use application
+          text: You may log in and use application
         reconfirm_succes:
           title: Email Confirmation Success
           text: We have sent you email to %{email}.</br>Please click the link in that message to activate your account.
@@ -104,7 +104,7 @@ diamante_front:
           title: Password Reset Failed
           text: Reset Code is invalid or expired
       message:
-        reset_success: Password successfully changed, you can use it to login
+        reset_success: Password successfully changed, you can use it to log in
 
     model:
       alert:
@@ -137,13 +137,13 @@ diamante_front:
         password: Enter Password
         new_password: Enter New Password
       button:
-        login: Sign In
+        login: Log In
         register: Continue
         reset_password: Reset Password
         new_password: Set New Password
 
     title:
-      login: Login
+      login: Log In
       register: Registration
       reset: Reset Password
 
